# hackathon-google-gemini-live-agent

./: README.md
ETL/: README.md  crawl_ingest.ipynb  ingest.py  requirements.txt  scraper.py
backend/: README.md  index.js  package-lock.json  package.json
frontend/: .env  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/auth/: LoginPage.tsx
frontend/src/pages/: Homepage.tsx
voice_agent/: README.md  pyproject.toml  requirements.txt  run.py
voice_agent/app/: classifier.py  config.py  frontend.html  function_calling.py  main.py  memory.py  news_tools.py  prompts.py  rag_tools.py  vertex.py
voice_agent/memory/: agent_memory.json
