[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch==8.11.0",
    "fastapi>=0.111.0",
    "google-genai>=0.8.0",
    "nest-asyncio>=1.6.0",
    "pydantic-settings>=2.2.0",
    "pyngrok>=7.0.0",
    "python-dateutil>=2.9.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29.0",
]
